--- a/css_file.css
+++ b/css_file.css
@@ -10,6 +10,7 @@ body {
    background: linear-gradient(
           rgba(0, 0, 0, 0.9), 
           rgba(0, 0, 0, 0.9) );
+   padding: 20px 15px;
 }
 
 table {
