--- a/css_file.css
+++ b/css_file.css
@@ -37,7 +37,7 @@ legend {
 }
 fieldset {
    margin: 1em auto;
-   background-color: #9a9dab;
+   background-color: #ffc88a;
    width: 60%;
 }
 form p {
@@ -70,7 +70,7 @@ form p {
    border-radius: 5px;
    text-align: center;
    color: white;
-   background-color: #8c9cbf;
+   background-color: #8d8d91;
    padding: 0.5em 0 0.5em 0;
    margin: 0.3em;
    width: 7em;
