--- a/css_file.css
+++ b/css_file.css
@@ -1,17 +1,48 @@
 /* general text formatting */
+*{
+   margin: 0;
+   padding: 0;
+   font-family: Century Gothic;
+}
 
 h1, h2, h3, nav, footer {
  font-family: Georgia, Cambria, "Times New Roman", serif;
  color: white;
+ padding-top: 5em;
 }
 body {
    font-family: "Lucida Sans", Verdana, Arial, white;
    font-size: 85%;
-   background: linear-gradient(
-          rgba(0, 0, 0, 0.9), 
-          rgba(0, 0, 0, 0.9) );
-   padding: 20px 15px;
+   background-image: url(./img/bg.jpeg);
+   height: 100vh;
+   background-size: cover;
+   background-position: center;
 }
+
+ul{
+   float: right;
+   list-style-type: none;
+   margin-top: 25px;
+
+}
+
+ul li{
+   display: inline-block;
+}
+
+ul li a{
+   text-decoration: none;
+   color: #fff;
+   padding: 5px 20px;
+   border: 1px solid #fff;
+   transition: 0.6s ease;
+}
+
+ul li a:hover{
+   background-color: #fff;
+   color: #000;
+}
+
 
 table {
    border: collapse; 
@@ -27,7 +58,7 @@ table tbody td{
 }
 
 legend {
-   background-color: #575961 ;
+   background-color: #303635 ;
    margin: 0 auto;
    width: 90%;
    padding: 10px;
@@ -37,7 +68,7 @@ legend {
 }
 fieldset {
    margin: 1em auto;
-   background-color: #ffc88a;
+   background-color: #81b5b2;
    width: 60%;
 }
 form p {
@@ -59,10 +90,10 @@ form p {
 }
 .paragraph {
    color: white;
-   padding: 5px;
+   padding-top: 5em;
 }
 .submit {
-   transform: translate(70%, 0%);
+   transform: translate(75%, 0px);
 }
 
 .rounded, .rounded:hover {
@@ -71,7 +102,7 @@ form p {
    border-radius: 5px;
    text-align: center;
    color: white;
-   background-color: #8d8d91;
+   background-color: #8c9cbf;
    padding: 0.5em 0 0.5em 0;
    margin: 0.3em;
    width: 7em;
@@ -80,4 +111,10 @@ form p {
 }
 .rounded:hover {
    background-color: #7f8dad;
+}
+
+.logo img{
+   float: left;
+   width: 130px;
+   height: auto;
 }
