--- a/css_file.css
+++ b/css_file.css
@@ -9,7 +9,7 @@ h1, h2, h3, nav, footer {
  font-family: Georgia, Cambria, "Times New Roman", serif;
  color: white;
  padding-top: 5em;
-}
+ transform: translate(33%, 0px);}
 body {
    font-family: "Lucida Sans", Verdana, Arial, white;
    font-size: 85%;
@@ -90,10 +90,10 @@ form p {
 }
 .paragraph {
    color: white;
-   padding-top: 5em;
+   padding-top: 2em;
 }
 .submit {
-   transform: translate(75%, 0px);
+   transform: translate(77%, 0px);
 }
 
 .rounded, .rounded:hover {
