--- a/css_file.css
+++ b/css_file.css
@@ -2,21 +2,25 @@
 *{
    margin: 0;
    padding: 0;
-   font-family: Century Gothic;
+   font-family: sans-serif;
 }
 
-h1, h2, h3, nav, footer {
- font-family: Georgia, Cambria, "Times New Roman", serif;
+h1{
+ font-family: sans-serif;
  color: white;
- padding-top: 5em;
- width: 400px;
- margin:0 auto;
+ width: 900px;
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  margin-top: -50px;
+  margin-left: -250px;
+ 
 }
 
 body {
    font-family: "Lucida Sans", Verdana, Arial, white;
    font-size: 85%;
-   background-image: url(./img/bg.jpeg);
+   background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(./img/calbg.jpeg);
    height: 100vh;
    background-size: cover;
    background-position: center;
@@ -37,13 +41,19 @@ ul li a{
    text-decoration: none;
    color: #fff;
    padding: 5px 20px;
-   border: 1px solid #fff;
+   border: 1px solid transparent;
    transition: 0.6s ease;
 }
 
 ul li a:hover{
    background-color: #fff;
    color: #000;
+}
+
+.logo img{
+   float: left;
+   width: 10em;
+   height: auto;
 }
 
 
@@ -93,7 +103,7 @@ form p {
 }
 .paragraph {
    color: white;
-   padding-top: 2em;
+   padding-top: 30em;
    margin-right: 150px;
    margin-left: 150px;
    margin-bottom: 30px
@@ -119,9 +129,8 @@ form p {
 
 .logo img{
    float: left;
-   width: 130px;
+   width: 10em;
    height: auto;
-   margin-left: 142px;
 }
 .calc{
    border: 1px solid #2f2f30;
@@ -143,4 +152,9 @@ form p {
 .field {
    color: white;
    font-weight: bold;
+}
+
+.main{
+   max-width: 1200px;
+   margin: auto;
 }
