--- a/css_file.css
+++ b/css_file.css
@@ -7,11 +7,12 @@
 
 h1{
  font-family: sans-serif;
+ font-size: 45px;
  color: white;
  width: 900px;
-  position: fixed;
-  top: 40%;
-  left: 50%;
+  position: absolute;
+  top: 27%;
+  right: 31%;
   margin-top: -50px;
   margin-left: -250px;
  
@@ -103,7 +104,8 @@ form p {
 }
 .paragraph {
    color: white;
-   padding-top: 30em;
+   font-style: oblique;
+   padding-top: 17em;
    margin-right: 150px;
    margin-left: 150px;
    margin-bottom: 30px
@@ -133,15 +135,19 @@ form p {
    height: auto;
 }
 .calc{
-   border: 1px solid #2f2f30;
-   background: rgba(255, 255, 255, .3);
-   border-bottom: 1px solid #2f2f30;
-   border-radius: 5px;
-   width: 250px;
-   height:180px;
-   margin-left: 150px
+  width: 400px;
+  height: 420px;
+  color: #000;
+  top: 50%;
+  left: 80%;
+  padding: 60px 30px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  box-shadow: 8px 8px 50px #000;
 
 }
+
 .table {
    width: 200px;
    height:180px;
