--- a/css/css_calculator.css
+++ b/css/css_calculator.css
@@ -21,7 +21,7 @@ h1{
 body {
    font-family: "Lucida Sans", Verdana, Arial, white;
    font-size: 85%;
-   background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(./img/calbg.jpeg);
+   background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url(../img/calbg.jpeg);
    height: 100vh;
    background-size: cover;
    background-position: center;
