--- a/css/css_routine.css
+++ b/css/css_routine.css
@@ -136,17 +136,27 @@ ul li a:hover{
     font-size: 21px;
 }
 
-.daysplits{
-   position: absolute;
-   top:45%;
-   width: 400px;
-   display: inline-block;
-   position: fixed;
-   top: 65%;
-   left: 48%;
-   margin-top: 150px;
-   margin-left: -180px;
+/** Buttons for Collaspe feature **/
 
+.button1{
+  position: absolute;
+  top: 20%;
+  left: 35%;
+  transform: translate(-50%, 50%);
+}
+
+.button2{
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+}
+
+.button3{
+  position: absolute;
+  top: 20%;
+  left: 65%;
+  transform: translate(-50%, 50%);
 }
 
 .btn{
