--- a/css/css_calculator.css
+++ b/css/css_calculator.css
@@ -6,15 +6,14 @@
 }
 
 h1{
+  text-align: center;
   font-family: sans-serif;
   font-size: 45px;
   color: white;
-  width: 900px;
-  position: absolute;
-  top: 27%;
-  right: 45%;
-  margin-top: -50px;
-  margin-left: -250px;
+  width:80%;
+  padding-top: 200px;
+  margin-left: 120px;
+  float: left;
  
 }
 
@@ -89,6 +88,15 @@ form p {
    margin-top: 0.5em;
 }
 
+input[type="number"], textarea{
+    margin: 10px 0;
+    background: transparent;
+    border: 0;
+    border-bottom: 2px solid #c5ecfd;
+    padding:10px;
+    color: #c5ecfd;
+    width: 100%;
+}
 .box {
    border: 1pt solid #95BEF0;
    padding: 0.5em;
@@ -105,10 +113,9 @@ form p {
 .paragraph {
    color: white;
    font-style: oblique;
-   padding-top: 20em;
-   margin-right: 150px;
+   width:80%;
    margin-left: 150px;
-   margin-bottom: 30px
+   display: inline-block;
 }
 
 
@@ -124,6 +131,9 @@ form p {
    width: 7em;
    -webkit-box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 4px 0 #b3b3b3;
    box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 4px 0 #b3b3b3; 
+   position: relative;
+   margin-left: 150px;
+   margin-top: 110px;
 }
 .rounded:hover {
    background-color: #7f8dad;
@@ -137,39 +147,44 @@ form p {
 
 .calc{
   width: 500px;
-  height: 520px;
+  height: 1000px;
   color: #000;
-  top: 50%;
-  left: 75%;
-  padding: 60px 30px;
-  position: absolute;
-  transform: translate(-50%, -50%);
+  top: 45%;
+  left: 85%;
+  float:right;
+  transform: translate(40%, 15%);
   box-sizing: border-box;
   box-shadow: 8px 8px 50px #000;
 
 }
 .front {
+   width: 50%;
+   position: absolute;
 
-   width: 1000px;
-   height:500px;
 }
+
 
 
 .table {
    width: 200px;
    height: 180px;
    padding-left: 100px;
-   padding-top: 10px;
+   padding-top: 30px;
 }
 
 .field {
    color: white;
    font-weight: bold;
 }
+.test{
+  color: white;
+   font-weight: bold;
+   float: right;
+}
 
 .main{
    max-width: 1200px;
-   margin: auto;
+   margin:0 auto;
 }
 
 .butcon {
