Added table to Calc Page
Also rounded numbers

--- a/css/css_calculator.css
+++ b/css/css_calculator.css
@@ -172,6 +172,12 @@ input[type="number"], textarea{
    padding-top: 30px;
 }
 
+.label {
+   color: white;
+   font-weight: bold;
+   text-decoration: underline;
+}
+
 .field {
    color: white;
    font-weight: bold;
