--- a/css/css_routineDAY6.css
+++ b/css/css_routineDAY6.css
@@ -78,14 +78,14 @@ ul li a:hover{
 .content-table {
   border-collapse: collapse;
   margin: 235px;
-  margin-left: 375px;
+  margin-left: 445px;
   font-size: 0.8em;
   border-radius: 5px 5px 0 0;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 .content-table thead tr {
-  background-color: #009879;
+  background-color: #C70039;
   color: #ffffff;
   text-align: left;
   font-weight: bold;
@@ -109,7 +109,7 @@ ul li a:hover{
 }
 
 .content-table tbody tr:last-of-type {
-  border-bottom: 37px solid #009879;
+  border-bottom: 37px solid #C70039;
 }
 
 /* text */
