--- a/css/css_routine.css
+++ b/css/css_routine.css
@@ -76,9 +76,7 @@ ul li a:hover{
 /* Table css */
 
 .content-table {
-  border-collapse: collapse;
-  margin: 160px;
-  margin-left: 525px;
+
   font-size: 0.8em;
   border-radius: 5px 5px 0 0;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -112,15 +110,20 @@ ul li a:hover{
   border-bottom: 37px solid #C70039;
 }
 
+#accordion{
+  padding-top: 10%;
+  position: relative;
+}
+
 /* text */
 
 .intro{
   font-family: sans-serif;
   font-size: 20px;
   font-weight: bold;
- color: white;
- width: 900px;
-  position: fixed;
+  color: white;
+  width: 900px;
+  position: relative;
   top: 20%;
   left: 44%;
   margin-top: -50px;
@@ -138,32 +141,13 @@ ul li a:hover{
 
 /** Buttons for Collaspe feature **/
 
-.button1{
-  position: absolute;
-  top: 20%;
-  left: 35%;
-  transform: translate(-50%, 50%);
-}
 
-.button2{
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, 50%);
-}
 
-.button3{
-  position: absolute;
-  top: 20%;
-  left: 65%;
-  transform: translate(-50%, 50%);
-}
-
-.btn{
-   border: 1px solid #fff;
-   padding: 10px 30px;
-   color: #fff;
-   text-decoration: none;
+.btn-link{
+  font-family: sans-serif!important;
+  font-size: 20px!important;
+  font-weight: bold!important;
+  color: white!important;
 }
 
 .btnACTIVE{
@@ -174,15 +158,24 @@ ul li a:hover{
    color: #000;
 }
 
-.btn:hover{
-   background-color: #fff;
-   color: #000;
-   transition: 0.6s ease;
+.btn-link:hover{
+   background-color: #fff!important;
+   color: #000!important;
+   transition: 0.6s ease!important;
 }
 
-.card {
-    margin-bottom: 15px;
+.card{
+   width: 90%;
+   background-color: rgba(0,0,0,0)!important;
+   box-shadow: 8px 8px 50px #000 !important;
 }
+.card-header{
+   text-align: center;
+   background-color: rgba(0,0,0,0)!important;
+   box-shadow: 8px 8px 50px #000 !important;
+   border: 1px solid #fff !important;
+}
+.
 
 .icon-action {
     margin-top: 5px;
