--- a/css/css_routine.css
+++ b/css/css_routine.css
@@ -111,8 +111,8 @@ ul li a:hover{
 }
 
 #accordion{
-  padding-top: 8%;
-  transform: translate(5%,10%);
+  margin-top: 215px;
+  padding-left: 120px;
   position: relative;
 }
 
